contact-me form

--- a/css/ca-gallery.css
+++ b/css/ca-gallery.css
@@ -92,7 +92,7 @@ body {
 .offcanvas-aside {
     position: fixed;
     height: 100%;
-    background: red;
+    background: rgb(113, 164, 217);
     width: 80vw;
     right: -80vw;
     z-index: 10;
@@ -101,6 +101,10 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: space-around;
+}
+
+#contact-h1 {
+    margin-bottom: 40px;
 }
 
 .offcanvas-aside img {
@@ -202,7 +206,7 @@ body {
 header.masthead {
     text-align: center;
     color: white;
-    background-image: url("../img/header-bg.jpg");
+    background-image: url("../img/SiGuNian-sign.png");
     background-repeat: no-repeat;
     background-attachment: scroll;
     background-position: center center;
